@@ -1,0 +1,3 @@
+MD5 f546a62494f527a88466bab598368581 QtCurve-Gtk2-0.55.0.tar.bz2 85596
+RMD160 140ef1231a7a0ee3db898f167d929c5d152aadb4 QtCurve-Gtk2-0.55.0.tar.bz2 85596
+SHA256 61c8d15893181b8d6dd2c4442c69a853c82b5698925417eafa7cef18ddb95259 QtCurve-Gtk2-0.55.0.tar.bz2 85596
