@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gtk-engines-qtcurve
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.4 2007/05/15 20:47:40 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.5 2007/10/17 14:27:54 beandog Exp $
+
+*gtk-engines-qtcurve-0.55.0 (17 Oct 2007)
+
+  17 Oct 2007; Steve Dibb <beandog@gentoo.org>
+  +gtk-engines-qtcurve-0.55.0.ebuild:
+  Version bump, bug 180112
 
   15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
   add <herd>no-herd</herd>
